2008-02-01  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	Choose the recommended IM if no current IM is running. otherwise
	the first entry will.

2008-01-30  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Add a wait for a workaround that something
	is stalled at gnome-session.

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	don't send any requests if it's still at the initialization.
	(im_chooser_simple_enable_im_on_toggled): Update the preference button
	state after the current position is set.
	(im_chooser_simple_sort_compare): new.
	(_im_chooser_simple_update_im_list): sort out according to whether
	it's the system default and the legacy IM.

2008-01-29  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: turn off -Wall and -Werror if it's not with
	--enable-maintainer-mode.

2008-01-28  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_im_list_on_changed):
	send a changed signal.
	(_im_chooser_simple_update_im_list): set initial IM if not yet.
	(im_chooser_simple_get_widget): Update a note a bit.
	(im_chooser_simple_is_modified): Follow the new way to detect
	the modification.

2008-01-25  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: Update a lot to work with imsettings.
	* src/xinput.[ch]: Remove.

	* src/im-chooser.[ch]: Remove.

	* src/im-chooser-private.h: Remove.

	* src/main.c: clean up the obsolete code.

2008-01-25  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Update to bring up IM through imsettings.

	* data/xinputinfo.sh.in: new.

2008-01-24  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: Check glib path.

2008-01-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: check pkgconfig for x11.

	* README: Add a description for XIM_PROGRAM.

2007-12-27  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.5.

2007-12-25  Akira TAGOH  <tagoh@redhat.com>
